--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 node_modules
 dist
-app/bower_components
+client/app/bower_components
 .tmp
 .publish/
 .env
 .DS_Store
 npm-debug.log
 Gemfile.lock
+public/dmd
